--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node src/index.js",
-    "test": "node test-service.js",
-    "test:help": "node test-service.js --help"
   },
   "keywords": [
     "potpie",
@@ -23,7 +21,9 @@
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   },
   "engines": {
     "node": ">=20.0.0"
